swen430as1/tests/valid/realTesting/A.while
void main() {
    real[] x = [1,2,3];
    //
    assert x == [1.0,2.0,3.0];
}
