swen430as1/tests/invalid/real/Real_Invalid_08.while
int max(int x, int y) {
    if(x >= y) {
	return x;
    } else {
	return y;
    }
}

void main() {
    assert max(2,1.0) == 2;
}
